commit#14 fix style.css redimensionnement du logo en version mobile (<400px) pour chargement plus rapide de la page

--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,10 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
+    .navbar-brand img {
+        height: 20px;
+        width: 108.54px;
+    }
 }
 
 @media (max-width: 767px) {
